04_TAD_simples/TAD_02/Resultados/JoaoHenrique/completo/result_compilation.txt
Resultados/JoaoHenrique/completo/candidato.c: In function ‘ImprimeCandidato’:
Resultados/JoaoHenrique/completo/candidato.c:118:43: warning: unknown conversion type character ‘\x0a’ in format [-Wformat=]
  118 |         printf("%s (%s), %d voto(s), %2.f%\n", candidato.nome, candidato.partido, candidato.votos, percentualVotos);
      |                                           ^~
Resultados/JoaoHenrique/completo/candidato.c:122:43: warning: unknown conversion type character ‘\x0a’ in format [-Wformat=]
  122 |         printf("%s (%s), %d voto(s), %2.f%\n", candidato.nome, candidato.partido, candidato.votos, percentualVotos);
      |                                           ^~
Resultados/JoaoHenrique/completo/eleicao.c: In function ‘InicializaEleicao’:
Resultados/JoaoHenrique/completo/eleicao.c:28:13: error: too few arguments to function ‘CriaCandidato’
   28 |             CriaCandidato()
      |             ^~~~~~~~~~~~~
In file included from Resultados/JoaoHenrique/completo/eleicao.h:4,
                 from Resultados/JoaoHenrique/completo/eleicao.c:2:
Resultados/JoaoHenrique/completo/candidato.h:20:12: note: declared here
   20 | tCandidato CriaCandidato(char *nome, char *partido, char cargo, int id);
      |            ^~~~~~~~~~~~~
Resultados/JoaoHenrique/completo/eleicao.c:28:28: error: expected ‘;’ before ‘}’ token
   28 |             CriaCandidato()
      |                            ^
      |                            ;
   29 |         }
      |         ~                   
Resultados/JoaoHenrique/completo/eleicao.c:20:69: warning: unused variable ‘totalEleitores’ [-Wunused-variable]
   20 |     int qntCandidatos, totalPresidentes = 0, totalGovernadores = 0, totalEleitores = 0;
      |                                                                     ^~~~~~~~~~~~~~
Resultados/JoaoHenrique/completo/eleicao.c:20:46: warning: unused variable ‘totalGovernadores’ [-Wunused-variable]
   20 |     int qntCandidatos, totalPresidentes = 0, totalGovernadores = 0, totalEleitores = 0;
      |                                              ^~~~~~~~~~~~~~~~~
Resultados/JoaoHenrique/completo/eleicao.c:20:24: warning: unused variable ‘totalPresidentes’ [-Wunused-variable]
   20 |     int qntCandidatos, totalPresidentes = 0, totalGovernadores = 0, totalEleitores = 0;
      |                        ^~~~~~~~~~~~~~~~
Resultados/JoaoHenrique/completo/eleicao.c: In function ‘ImprimeResultadoEleicao’:
Resultados/JoaoHenrique/completo/eleicao.c:60:22: error: ‘candidato’ undeclared (first use in this function); did you mean ‘tCandidato’?
   60 |     ImprimeCandidato(candidato, porcentagem);
      |                      ^~~~~~~~~
      |                      tCandidato
Resultados/JoaoHenrique/completo/eleicao.c:60:22: note: each undeclared identifier is reported only once for each function it appears in
Resultados/JoaoHenrique/completo/eleicao.c:60:33: error: ‘porcentagem’ undeclared (first use in this function)
   60 |     ImprimeCandidato(candidato, porcentagem);
      |                                 ^~~~~~~~~~~
Resultados/JoaoHenrique/completo/eleicao.c:65:43: error: ‘nulos’ undeclared (first use in this function)
   65 |     printf("- NULOS E BRANCOS: %d, %d\n", nulos, brancos);
      |                                           ^~~~~
Resultados/JoaoHenrique/completo/eleicao.c:65:50: error: ‘brancos’ undeclared (first use in this function)
   65 |     printf("- NULOS E BRANCOS: %d, %d\n", nulos, brancos);
      |                                                  ^~~~~~~
